# dio

./: .gitignore  LICENSE.md  README.md  example.py  flake.nix  pyproject.toml
dio/: __init__.py  decorators.py
python/: decorators.py  flake.nix
