[project]
name = "dio"
version = "0.1.0"
description = "Python package for branding and working with AI generated code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[tool.uv.sources]
dio = { workspace = true }


[tool.uv.workspace]
members = ["."]
exclude = [".direnv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
    "pytest>=8.3.3",
    "hypothesis>=6.112.2"
]
